[project]
name = "cdf-samplingcbf"
version = "0.1.0"
description = ""
authors = [
    {name = "yulinli-rin",email = "yulin.li@trans-n.ai"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "cvxpy (>=1.6.5,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "pytorch-minimize @ git+https://github.com/rfeinman/pytorch-minimize.git"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
